fixed bug where rotation was visible in non-hover state

--- a/app/sass/assets/elr-sass-utilities/animations/_dash-icon.scss
+++ b/app/sass/assets/elr-sass-utilities/animations/_dash-icon.scss
@@ -9,9 +9,13 @@
         padding: 0;
         z-index: 10;
         border: $border-thickness dashed $color;
-
-        @if ($rotate) { @include elr-spin; }
     }
 
-    &:hover { box-shadow: 0 0 0 0 rgba($color, 0); }
+    &:hover {
+        box-shadow: 0 0 0 0 rgba($color, 0);
+
+        &:after {
+            @if ($rotate) { @include elr-spin; }
+        }
+    }
 }
